changes in the landing

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<link href="assets/css/animate.min.css" rel="stylesheet" />
 	<link href="assets/css/style.min.css" rel="stylesheet" />
 	<link href="assets/css/style-responsive.min.css" rel="stylesheet" />
-	<link href="assets/css/theme/default.css" id="theme" rel="stylesheet" />
+	<link href="assets/css/theme/red.css" id="theme" rel="stylesheet" />
 	<!-- ================== END BASE CSS STYLE ================== -->
 	
 	<!-- ================== BEGIN BASE JS ================== -->
@@ -41,7 +41,7 @@
                     <a href="index.html" class="navbar-brand">
                         <span class="brand-logo"></span>
                         <span class="brand-text">
-                            <span class="text-theme">Color</span> Admin
+                            <span class="text-theme">H1</span> CS
                         </span>
                     </a>
                 </div>
@@ -82,8 +82,8 @@
             <!-- end content-bg -->
             <!-- begin container -->
             <div class="container home-content">
-                <h1>Welcome to Color Admin</h1>
-                <h3>Multipurpose One Page Theme</h3>
+                <h1>Houston's #1 Cleaning Specialist</h1>
+                <h3>“A Clean Satisfaction Guaranteed!!”</h3>
                 <p>
                     We have created a multi-purpose theme that take the form of One-Page or Multi-Page Version.<br />
                     Use our <a href="#">theme panel</a> to select your favorite theme color.
