About us changes

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<link href="assets/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
 	<link href="assets/plugins/font-awesome/css/font-awesome.min.css" rel="stylesheet" />
 	<link href="assets/css/animate.min.css" rel="stylesheet" />
-	<link href="assets/css/style.min.css" rel="stylesheet" />
+	<link href="assets/css/style.css" rel="stylesheet" />
 	<link href="assets/css/style-responsive.min.css" rel="stylesheet" />
 	<link href="assets/css/theme/red.css" id="theme" rel="stylesheet" />
 	<!-- ================== END BASE CSS STYLE ================== -->
@@ -84,11 +84,12 @@
             <div class="container home-content">
                 <h1>Houston's #1 Cleaning Specialist</h1>
                 <h3>“A Clean Satisfaction Guaranteed!!”</h3>
-                <p>
-                    We have created a multi-purpose theme that take the form of One-Page or Multi-Page Version.<br />
-                    Use our <a href="#">theme panel</a> to select your favorite theme color.
-                </p>
-                <a href="#" class="btn btn-theme">Explore More</a> <a href="#" class="btn btn-outline">Purchase Now</a><br />
+                <h5>
+                    Our wide ranges of services enable us to be a single source for all your facility needs. We will meet all your needs and timelines trying to target your budget.
+                </h5>
+                <a href="#" class="btn btn-theme">Call Now</a> 
+                <!-- <a href="#" class="btn btn-outline">Purchase Now</a> -->
+                <br />
                 <br />
                 or <a href="#">subscribe</a> newsletter
             </div>
@@ -100,93 +101,11 @@
         <div id="about" class="content" data-scrollview="true">
             <!-- begin container -->
             <div class="container" data-animation="true" data-animation-type="fadeInDown">
-                <h2 class="content-title">About Us</h2>
-                <p class="content-desc">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum consectetur eros dolor,<br />
-                    sed bibendum turpis luctus eget
-                </p>
+                <h1 class="content-title">About Us</h1>
+                <h3 class="content-desc">
+                    Houston's #1 Cleaning Specialist, LLC has been providing professional construction, commercial and residential cleaning. We take great pride in our work treating all projects with the same high-level attention. We have years of experience in our respective craft.
+                </h3>
                 <!-- begin row -->
-                <div class="row">
-                    <!-- begin col-4 -->
-                    <div class="col-md-4 col-sm-6">
-                        <!-- begin about -->
-                        <div class="about">
-                            <h3>Our Story</h3>
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                                Vestibulum posuere augue eget ante porttitor fringilla. 
-                                Aliquam laoreet, sem eu dapibus congue, velit justo ullamcorper urna, 
-                                non rutrum dolor risus non sapien. Vivamus vel tincidunt quam. 
-                                Donec ultrices nisl ipsum, sed elementum ex dictum nec. 
-                            </p>
-                            <p>
-                                In non libero at orci rutrum viverra at ac felis. 
-                                Curabitur a efficitur libero, eu finibus quam. 
-                                Pellentesque pretium ante vitae est molestie, ut faucibus tortor commodo. 
-                                Donec gravida, eros ac pretium cursus, est erat dapibus quam, 
-                                sit amet dapibus nisl magna sit amet orci. 
-                            </p>
-                        </div>
-                        <!-- end about -->
-                    </div>
-                    <!-- end col-4 -->
-                    <!-- begin col-4 -->
-                    <div class="col-md-4 col-sm-6">
-                        <h3>Our Philosophy</h3>
-                        <!-- begin about-author -->
-                        <div class="about-author">
-                            <div class="quote bg-silver">
-                                <i class="fa fa-quote-left"></i>
-                                <h3>We work harder,<br /><span>to let our user keep simple</span></h3>
-                                <i class="fa fa-quote-right"></i>
-                            </div>
-                            <div class="author">
-                                <div class="image">
-                                    <img src="assets/img/user-1.jpg" alt="Sean Ngu" />
-                                </div>
-                                <div class="info">
-                                    Sean Ngu
-                                    <small>Front End Developer</small>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- end about-author -->
-                    </div>
-                    <!-- end col-4 -->
-                    <!-- begin col-4 -->
-                    <div class="col-md-4 col-sm-12">
-                        <h3>Our Experience</h3>
-                        <!-- begin skills -->
-                        <div class="skills">
-                            <div class="skills-name">Front End</div>
-                            <div class="progress progress-striped">
-                                <div class="progress-bar progress-bar-success" style="width: 95%">
-                                    <span class="progress-number">95%</span>
-                                </div>
-                            </div>
-                            <div class="skills-name">Programming</div>
-                            <div class="progress progress-striped">
-                                <div class="progress-bar progress-bar-success" style="width: 90%">
-                                    <span class="progress-number">90%</span>
-                                </div>
-                            </div>
-                            <div class="skills-name">Database Design</div>
-                            <div class="progress progress-striped">
-                                <div class="progress-bar progress-bar-success" style="width: 85%">
-                                    <span class="progress-number">85%</span>
-                                </div>
-                            </div>
-                            <div class="skills-name">Wordpress</div>
-                            <div class="progress progress-striped">
-                                <div class="progress-bar progress-bar-success" style="width: 80%">
-                                    <span class="progress-number">80%</span>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- end skills -->
-                    </div>
-                    <!-- end col-4 -->
-                </div>
                 <!-- end row -->
             </div>
             <!-- end container -->
@@ -337,10 +256,8 @@
                 <div class="row">
                     <!-- begin col-12 -->
                     <div class="col-md-12 quote">
-                        <i class="fa fa-quote-left"></i> Passion leads to design, design leads to performance, <br />
-                        performance leads to <span class="text-theme">success</span>!  
-                        <i class="fa fa-quote-right"></i>
-                        <small>Sean Themes, Developer Teams in Malaysia</small>
+                        We are insured and bonded, have tons of references and unlike our competitors “WE GUARANTEE OUR WORK!!”  We will be more than happy to help you on the cleaning that you may need.  Whether it is a onetime clean or recurring service, we will try to target your budget according to the scope of work.  We don’t cut corners, we clean them.
+                        <small>All chemicals and materials are included in the scope of work.  All liquids and chemicals are pet friendly. </small>
                     </div>
                     <!-- end col-12 -->
                 </div>
@@ -906,3 +823,57 @@
 	</script>
 </body>
 </html>
+
+<!--
+    Houston's #1 Cleaning Specialist provides excelent
+conslruction clean up services that our clients have come 0
+rely on.
+
+Houston's #1 Cleaning Specialist 1s a leading provider
+of cleaning services with an outstanding reputation for qually
+and Integr throughout Houston and the surrounding areas.
+
+For more than a dozen years we have provided nigh qualy for
+businesses of all sizes. Properly management fims, facity
+Managers and bulking owners Retail Stores. Churches, Day
+care New constuction ust Houston's #1 Cleaning
+Specialist for their most demanding clearing and janitorial
+Jobs.
+
+By choosing Us you can be rest assured that your facility wil
+be impeccably maintained and vill reflect the professional
+Image you wish fo project o your clients and employees.
+
+@Attordable Cleaning Services - Clean-up for less with
+Houston's #1 Cleaning Specialist
+
+Let our staf customize 2 cleaning service program o su your
+Individual needs and your budget Whether you requre dally
+cleaning, weekly or monihly service, of Just one-ime only
+Service, you can count on Us. for top-nolch cleaning al
+unbeatabie rates.
+
+@Experience Complete Satisfaction
+We constantly monfor our work and Should any area fal fo
+meet our stict ofice cleaning standards, & wil be conecied
+immedalely And of course, We aliays encourage cusiomer
+communication and use your input o heighten our level of
+caning services
+
+@adaitionai benef for your peace of mind
+
+Houston's #1 Cleaning Specialist is fully insured and
+bonded, providing llabity and property damage coverage as
+well as employee bonding and all other appicable forms of
+Insurance coverage.
+
+All employees are screened for your protection. They are neat
+in appearance and can proper company identification
+
+Enhance the professional of your business |
+‘eateneg roe fly Te eniy sore]
+
+Please request a free estimate or, for more information
+‘on our customized office cleaning services, call vs of
+
+-->
