header bg image, about us, our services, why choose us

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <div id="home" class="content has-bg home">
             <!-- begin content-bg -->
             <div class="content-bg">
-                <img src="assets/img/home-bg.jpg" alt="Home" />
+                <!-- <img src="assets/img/main-bg.jpg" alt="Home" /> -->
             </div>
             <!-- end content-bg -->
             <!-- begin container -->
@@ -105,6 +105,14 @@
                 <h3 class="content-desc">
                     Houston's #1 Cleaning Specialist, LLC has been providing professional construction, commercial and residential cleaning. We take great pride in our work treating all projects with the same high-level attention. We have years of experience in our respective craft.
                 </h3>
+
+                <h3 class="content-desc">Our cleaning approach is unique Houston's #1 Cleaning Specialist, LLC knows the importance of safety meeting all CDC and OSHA requirements.
+                    We go to all and any means necessary to make sure that the job gets done right the first time regardless of size or scope of work.
+                </h3>
+
+                <h3 class="content-desc">Houston's #1 Cleaning Specialist is a leading provider
+                    of cleaning services with an outstanding reputation for quality
+                    and integrity throughout Houston and the surrounding areas.</h3>
                 <!-- begin row -->
                 <!-- end row -->
             </div>
@@ -126,7 +134,7 @@
                     <!-- begin col-3 -->
                     <div class="col-md-3 col-sm-3 milestone-col">
                         <div class="milestone">
-                            <div class="number" data-animation="true" data-animation-type="number" data-final-number="1292">1,292</div>
+                            <div class="number">Office</div>
                             <div class="title">Themes & Template</div>
                         </div>
                     </div>
@@ -134,24 +142,24 @@
                     <!-- begin col-3 -->
                     <div class="col-md-3 col-sm-3 milestone-col">
                         <div class="milestone">
-                            <div class="number" data-animation="true" data-animation-type="number" data-final-number="9039">9,039</div>
-                            <div class="title">Registered Members</div>
+                            <div class="number">Commercial</div>
+                            <div class="title">Themes & Template</div>
                         </div>
                     </div>
                     <!-- end col-3 -->
                     <!-- begin col-3 -->
                     <div class="col-md-3 col-sm-3 milestone-col">
                         <div class="milestone">
-                            <div class="number" data-animation="true" data-animation-type="number" data-final-number="89291">89,291</div>
-                            <div class="title">Items Sold</div>
+                            <div class="number">Construction</div>
+                            <div class="title">Themes & Template</div>
                         </div>
                     </div>
                     <!-- end col-3 -->
                     <!-- begin col-3 -->
                     <div class="col-md-3 col-sm-3 milestone-col">
                         <div class="milestone">
-                            <div class="number" data-animation="true" data-animation-type="number" data-final-number="129">129</div>
-                            <div class="title">Theme Authors</div>
+                            <div class="number">Residential</div>
+                            <div class="title">Themes & Template</div>
                         </div>
                     </div>
                     <!-- end col-3 -->
@@ -166,71 +174,67 @@
         <div id="team" class="content" data-scrollview="true">
             <!-- begin container -->
             <div class="container">
-                <h2 class="content-title">Our Team</h2>
-                <p class="content-desc">
-                    Phasellus suscipit nisi hendrerit metus pharetra dignissim. Nullam nunc ante, viverra quis<br /> 
-                    ex non, porttitor iaculis nisi.
-                </p>
+                <h2 class="content-title">Why Choose Us</h2>
+                <h3 class="content-desc">
+                    By choosing Us you can be rest assured that your facility wil be impeccably maintained and will reflect the professional image you wish to project o your clients and employees.
+                </h3>
                 <!-- begin row -->
                 <div class="row">
                     <!-- begin col-4 -->
-                    <div class="col-md-4 col-sm-4">
+                    <div class="col-md-3 col-sm-3">
                         <!-- begin team -->
                         <div class="team">             
                             <div class="image" data-animation="true" data-animation-type="flipInX">
                                 <img src="assets/img/user-1.jpg" alt="Ryan Teller" />
                             </div>
                             <div class="info">
-                                <h3 class="name">Ryan Teller</h3>
-                                <div class="title text-theme">FOUNDER</div>
-                                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.</p>
-                                <div class="social">
-                                    <a href="#"><i class="fa fa-facebook fa-lg fa-fw"></i></a>
-                                    <a href="#"><i class="fa fa-twitter fa-lg fa-fw"></i></a>
-                                    <a href="#"><i class="fa fa-google-plus fa-lg fa-fw"></i></a>
-                                </div>
+                                <h3 class="name">Over</h3>
+                                <div class="title text-theme">10,000 Cleans</div>
                             </div>                     
                         </div>
                         <!-- end team -->
                     </div>
                     <!-- end col-4 -->
                     <!-- begin col-4 -->
-                    <div class="col-md-4 col-sm-4">
+                    <div class="col-md-3 col-sm-3">
                         <!-- begin team -->
                         <div class="team">             
                             <div class="image" data-animation="true" data-animation-type="flipInX">
                                 <img src="assets/img/user-2.jpg" alt="Jonny Cash" />
                             </div>
                             <div class="info">
-                                <h3 class="name">Johnny Cash</h3>
-                                <div class="title text-theme">WEB DEVELOPER</div>
-                                <p>Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.</p>
-                                <div class="social">
-                                    <a href="#"><i class="fa fa-facebook fa-lg fa-fw"></i></a>
-                                    <a href="#"><i class="fa fa-twitter fa-lg fa-fw"></i></a>
-                                    <a href="#"><i class="fa fa-google-plus fa-lg fa-fw"></i></a>
-                                </div>
+                                <h3 class="name">100%</h3>
+                                <div class="title text-theme">Satisfaction</div>
                             </div>                     
                         </div>
                         <!-- end team -->
                     </div>
                     <!-- end col-4 -->
                     <!-- begin col-4 -->
-                    <div class="col-md-4 col-sm-4">
+                    <div class="col-md-3 col-sm-3">
                         <!-- begin team -->
                         <div class="team">             
                             <div class="image" data-animation="true" data-animation-type="flipInX">
                                 <img src="assets/img/user-3.jpg" alt="Mia Donovan" />
                             </div>
                             <div class="info">
-                                <h3 class="name">Mia Donovan</h3>
-                                <div class="title text-theme">WEB DESIGNER</div>
-                                <p>Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. </p>
-                                <div class="social">
-                                    <a href="#"><i class="fa fa-facebook fa-lg fa-fw"></i></a>
-                                    <a href="#"><i class="fa fa-twitter fa-lg fa-fw"></i></a>
-                                    <a href="#"><i class="fa fa-google-plus fa-lg fa-fw"></i></a>
-                                </div>
+                                <h3 class="name">Eco-friendly</h3>
+                                <div class="title text-theme">Cleaning Products</div>
+                            </div>                     
+                        </div>
+                        <!-- end team -->
+                    </div>
+                    <!-- end col-4 -->
+                    <!-- begin col-4 -->
+                    <div class="col-md-3 col-sm-3">
+                        <!-- begin team -->
+                        <div class="team">             
+                            <div class="image" data-animation="true" data-animation-type="flipInX">
+                                <img src="assets/img/user-3.jpg" alt="Mia Donovan" />
+                            </div>
+                            <div class="info">
+                                <h3 class="name">Cost</h3>
+                                <div class="title text-theme">Effective</div>
                             </div>                     
                         </div>
                         <!-- end team -->
