updates on images and why choose us

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                         <!-- begin team -->
                         <div class="team">             
                             <div class="image" data-animation="true" data-animation-type="flipInX">
-                                <img src="assets/img/user-1.jpg" alt="Ryan Teller" />
+                                <img src="assets/img/over.jpg" alt="Ryan Teller" />
                             </div>
                             <div class="info">
                                 <h3 class="name">Over</h3>
@@ -200,7 +200,7 @@
                         <!-- begin team -->
                         <div class="team">             
                             <div class="image" data-animation="true" data-animation-type="flipInX">
-                                <img src="assets/img/user-2.jpg" alt="Jonny Cash" />
+                                <img src="assets/img/satisfaction.png" alt="Jonny Cash" />
                             </div>
                             <div class="info">
                                 <h3 class="name">100%</h3>
@@ -215,7 +215,7 @@
                         <!-- begin team -->
                         <div class="team">             
                             <div class="image" data-animation="true" data-animation-type="flipInX">
-                                <img src="assets/img/user-3.jpg" alt="Mia Donovan" />
+                                <img src="assets/img/eco-friendly.png" alt="Mia Donovan" />
                             </div>
                             <div class="info">
                                 <h3 class="name">Eco-friendly</h3>
@@ -230,7 +230,7 @@
                         <!-- begin team -->
                         <div class="team">             
                             <div class="image" data-animation="true" data-animation-type="flipInX">
-                                <img src="assets/img/user-3.jpg" alt="Mia Donovan" />
+                                <img src="assets/img/cost-effective.jpg" alt="Mia Donovan" />
                             </div>
                             <div class="info">
                                 <h3 class="name">Cost</h3>
@@ -250,8 +250,8 @@
         <!-- begin #quote -->
         <div id="quote" class="content bg-black-darker has-bg" data-scrollview="true">
             <!-- begin content-bg -->
-            <div class="content-bg">
-                <img src="assets/img/quote-bg.jpg" alt="Quote" />
+            <div class="content-bg phrase">
+                <!-- <img src="assets/img/OAPN5353.JPG" alt="Quote" /> -->
             </div>
             <!-- end content-bg -->
             <!-- begin container -->
