changes on responsive images

--- a/index.html
+++ b/index.html
@@ -278,36 +278,32 @@
                 <div class="row row-space-10">
                     <h3 class="text-theme">COMMERCIAL</h3>
                     <!-- begin col-3 -->
-                    <div class="col-xs-12 col-sm-4 work">
+                    <div class="col-xs-6 col-sm-4 work">
                         <img src="assets/img/commercial/img1.jpg" alt="">
                     </div>
                     <!-- end col-3 -->
                     <!-- begin col-3 -->
-                    <div class="col-xs-12 col-sm-4 work">
+                    <div class="col-xs-6 col-sm-4 work">
                         <img src="assets/img/commercial/img2.jpg" alt="">
                     </div>
                     <!-- end col-3 -->
                     <!-- begin col-3 -->
-                    <div class="col-xs-12 col-sm-4 work">
+                    <div class="col-xs-6 col-sm-4 work">
                         <img src="assets/img/commercial/img3.jpg" alt="">
                     </div>
                     <!-- end col-3 -->
-                </div>
-                <!-- end row -->
-                <!-- begin row -->
-                <div class="row row-space-10">
                     <!-- begin col-3 -->
-                    <div class="col-xs-12 col-sm-4 work">
+                    <div class="col-xs-6 col-sm-4 work">
                         <img src="assets/img/commercial/img4.jpg" alt="">
                     </div>
                     <!-- end col-3 -->
                     <!-- begin col-3 -->
-                    <div class="col-xs-12 col-sm-4 work">
+                    <div class="col-xs-6 col-sm-4 work">
                         <img src="assets/img/commercial/img5.jpg" alt="">
                     </div>
                     <!-- end col-3 -->
                     <!-- begin col-3 -->
-                    <div class="col-xs-12 col-sm-4 work">
+                    <div class="col-xs-6 col-sm-4 work">
                         <img src="assets/img/commercial/img6.jpg" alt="">
                     </div>
                 </div>
@@ -316,35 +312,33 @@
                 <div class="row row-space-10">
                     <h3 class="text-theme">CONSTRUCTION</h3>
                     <!-- begin col-3 -->
-                    <div class="col-xs-12 col-sm-4 work">
+                    <div class="col-xs-6 col-sm-4 work">
                         <img src="assets/img/construction/img1.jpg" alt="">
                     </div>
                     <!-- end col-3 -->
                     <!-- begin col-3 -->
-                    <div class="col-xs-12 col-sm-4 work">
+                    <div class="col-xs-6 col-sm-4 work">
                         <img src="assets/img/construction/img2.jpg" alt="">
                     </div>
                     <!-- end col-3 -->
                     <!-- begin col-3 -->
-                    <div class="col-xs-12 col-sm-4 work">
+                    <div class="col-xs-6 col-sm-4 work">
                         <img src="assets/img/construction/img3.jpg" alt="">
                     </div>
                     <!-- end col-3 -->
-                </div>
 
-                <div class="row row-space-10">
                     <!-- begin col-3 -->
-                    <div class="col-xs-12 col-sm-4 work">
+                    <div class="col-xs-6 col-sm-4 work">
                         <img src="assets/img/construction/img4.jpg" alt="">
                     </div>
                     <!-- end col-3 -->
                     <!-- begin col-3 -->
-                    <div class="col-xs-12 col-sm-4 work">
+                    <div class="col-xs-6 col-sm-4 work">
                         <img src="assets/img/construction/img5.jpg" alt="">
                     </div>
                     <!-- end col-3 -->
                     <!-- begin col-3 -->
-                    <div class="col-xs-12 col-sm-4 work">
+                    <div class="col-xs-6 col-sm-4 work">
                         <img src="assets/img/construction/img6.jpg" alt="">
                     </div>
                 </div>
@@ -352,17 +346,17 @@
                 <div class="row row-space-10">
                     <h3 class="text-theme">RESIDENCIAL</h3>
                     <!-- begin col-3 -->
-                    <div class="col-xs-12 col-sm-4 work">
+                    <div class="col-xs-6 col-sm-4 work">
                         <img src="assets/img/residencial/img1.jpg" alt="">
                     </div>
                     <!-- end col-3 -->
                     <!-- begin col-3 -->
-                    <div class="col-xs-12 col-sm-4 work">
+                    <div class="col-xs-6 col-sm-4 work">
                         <img src="assets/img/residencial/img2.jpg" alt="">
                     </div>
                     <!-- end col-3 -->
                     <!-- begin col-3 -->
-                    <div class="col-xs-12 col-sm-4 work">
+                    <div class="col-xs-6 col-sm-4 work center">
                         <img src="assets/img/residencial/img3.jpg" alt="">
                     </div>
                     <!-- end col-3 -->
@@ -371,17 +365,17 @@
                 <div class="row row-space-10">
                     <h3 class="text-theme">OFFICE</h3>
                     <!-- begin col-3 -->
-                    <div class="col-xs-12 col-sm-4 work">
+                    <div class="col-xs-6 col-sm-4 work">
                         <img src="assets/img/office/img1.jpg" alt="">
                     </div>
                     <!-- end col-3 -->
                     <!-- begin col-3 -->
-                    <div class="col-xs-12 col-sm-4 work">
+                    <div class="col-xs-6 col-sm-4 work">
                         <img src="assets/img/office/img2.jpg" alt="">
                     </div>
                     <!-- end col-3 -->
                     <!-- begin col-3 -->
-                    <div class="col-xs-12 col-sm-4 work">
+                    <div class="col-xs-6 col-sm-4 work center">
                         <img src="assets/img/office/img3.JPG" alt="">
                     </div>
                     <!-- end col-3 -->
